--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@reduxjs/toolkit": "2.5.1",
         "async-mutex": "^0.5.0",
         "framer-motion": "12.0.0",
+        "jwt-decode": "^4.0.0",
         "lefthook": "1.10.10",
         "react": "19.0.0",
         "react-dom": "19.0.0",
